--- a/css/zozor.css
+++ b/css/zozor.css
@@ -33,3 +33,107 @@ header h2 {
     margin-top: 0px;
     font-size: 18px;
 }
+
+/** Menu Navegación **/
+nav {
+    display: initial;
+    text-align: right;
+    width: 740px;
+    margin-bottom: 0px;
+}
+
+nav ul {
+    list-style-type: none;
+}
+
+nav li {
+    display: inline-block;
+    margin-right: 15px;
+}
+
+nav a {
+    font-size: 1.6em;
+    text-decoration: none;
+    color: black;
+    padding-bottom: 3px;
+}
+
+nav a:hover {
+    color: brown;
+    border-bottom: 3px solid brown;
+}
+
+/** Banner Image **/
+#banner_image {
+    margin-top: 10px;
+    height: 200px;
+    border-radius: 5px;
+    background: url('../images/sanfrancisco.jpg') no-repeat;
+    margin-bottom: 20px;
+    position: relative;
+    box-shadow: 0px 4px 4px black;
+}
+
+#banner_description {
+    position: absolute;
+    bottom: 0px;
+    height: 33px;
+    width: 99.5%;
+    color: white;
+    padding-left: 5px;
+    background-color: rgba(24, 24, 24, 0.8);
+    font-size: 12px;
+    padding-top: 15px;
+    border-radius: 0px 0px 5px 5px;
+}
+
+.red_button {
+    position: absolute;
+    background: url('../images/red_background.png');
+    right: 5px;
+    bottom: 5px;
+    text-align: center;
+    height: 25px;
+    color: white;
+    display: inline-block;
+    font-size: 15px;
+    padding: 3px 8px 0px 8px;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+/** section **/
+section{
+    margin: 0px;
+}
+
+article, aside {
+    display: inline-block;
+    text-align: justify;
+    vertical-align: top;
+}
+
+article {
+    width: 625px;
+    margin-right: 15px;
+}
+
+aside {
+    position: relative;
+    width: 235px;
+    background-color: gray;
+    border-radius: 5px;
+    padding: 10px;
+    color: white;
+    box-shadow: 0px 2px 5px black;
+}
+
+#arrow {
+    position: absolute;
+    top: 100px;
+    left: -12px;
+}
+
+#zozor_picture{
+    text-align: center;
+}
